<resources>
    <string name="app_name">Complvtvm</string>
    <string name="guerrero">Guerrer@</string>
    <string name="box">Box</string>
    <string name="Hoy_no_hay_clases">Hoy no hay clases</string>
    <string name="apuntarme">Apuntarme</string>
    <string name="Escribe_tu_nombre">Escribe tu nombre para apuntarte</string>
    <string name="calendario">Calendario</string>
    <string name="aforo1">Aforo: </string>
    <string name="aforo2">Aforo </string>
    <string name="numero_aforo">10 </string>
    <string name="fecha">Hoy </string>
    <string name="personas">personas</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Mañana">Mañana</string>
    <string name="Horarios">Horarios</string>
    <string name="Añadir">Añadir</string>
    <string name="añadir_horario">AÑADIR HORARIO</string>
    <string name="añadir_aforo">AÑADIR AFORO</string>
    <string name="ya_estas_apuntado">Te has apuntado a esta hora</string>
    <string name="Eliminar">¿Eliminar horario?</string>
    <string name="estas_consumiendo_mucha_memoria">Estas consumiendo demasiada memoria creando tantas clases</string>
    <string name="Te_has_apuntado_en_esta_clase">Te has apuntado en esta clase</string>

    <string name="elimina_un_horario_antes_de_añadir_otro">Elimina un horario antes de añadir uno nuevo</string>
    <string name="aforo_completo">Aforo completo</string>


</resources>
