<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DojoActivity">

    <ImageView
        android:id="@+id/img_mma"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp90"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mma" />

    <ListView
        android:id="@+id/id_lisView_mma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/id_botonDojo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_fecha_text" >

    </ListView>

    <Button
        android:id="@+id/id_botonDojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mañana"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_aforo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/aforo1"
        android:textSize="@dimen/sp25"
        app:layout_constraintStart_toEndOf="@+id/id_fecha_text"
        app:layout_constraintTop_toBottomOf="@+id/img_mma" />

    <TextView
        android:id="@+id/id_fecha_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="@dimen/sp25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_mma" />

    <TextView
        android:id="@+id/n_aforo_dojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/numero_aforo"
        android:textSize="@dimen/sp25"
        app:layout_constraintStart_toEndOf="@+id/id_aforo"
        app:layout_constraintTop_toBottomOf="@+id/img_mma" />

    <TextView
        android:id="@+id/id_personas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/personas"
        android:textSize="@dimen/sp25"
        app:layout_constraintStart_toEndOf="@+id/n_aforo_dojo"
        app:layout_constraintTop_toBottomOf="@+id/img_mma" />
</androidx.constraintlayout.widget.ConstraintLayout>